--- a/src/application.properties
+++ b/src/application.properties
@@ -5,8 +5,8 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 #HIBERNATE
 jdbc.driverClassName = com.mysql.cj.jdbc.Driver
-jdbc.url.sldc = jdbc:mysql://192.168.0.251:3306/ea2_db_jul_2019?useUnicode=yes&characterEncoding=UTF-8
-#jdbc.url.sldc = jdbc:mysql://localhost:3307/ea2_db_jul_2019?useUnicode=yes&characterEncoding=UTF-8
+#jdbc.url.sldc = jdbc:mysql://192.168.0.251:3306/ea2_db_jul_2019?useUnicode=yes&characterEncoding=UTF-8
+jdbc.url.sldc = jdbc:mysql://localhost:3307/ea2_db_jul_2019?useUnicode=yes&characterEncoding=UTF-8
 #jdbc.url.sldc = jdbc:mysql://eapdb.chilj9mcjnsy.ap-south-1.rds.amazonaws.com:3306/eap?useUnicode=yes&characterEncoding=UTF-8
 jdbc.username =pstcl
 jdbc.password =pstcl
