--- a/src/application.properties
+++ b/src/application.properties
@@ -4,9 +4,9 @@ server.servlet.context-path=/EA2
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 #HIBERNATE
-jdbc.driverClassName = com.mysql.cj.jdbc.Driver
-#jdbc.url.sldc = jdbc:mysql://192.168.0.251:3306/ea2_db_jul_2019?useUnicode=yes&characterEncoding=UTF-8
-jdbc.url.sldc = jdbc:mysql://localhost:3307/ea2_db_jul_2019?useUnicode=yes&characterEncoding=UTF-8
+jdbc.driverClassName = com.mysql.jdbc.Driver
+jdbc.url.sldc = jdbc:mysql://192.168.0.251:3306/ea2_db_jul_2019?useUnicode=yes&characterEncoding=UTF-8
+#jdbc.url.sldc = jdbc:mysql://localhost:3307/ea2_db_jul_2019?useUnicode=yes&characterEncoding=UTF-8
 #jdbc.url.sldc = jdbc:mysql://eapdb.chilj9mcjnsy.ap-south-1.rds.amazonaws.com:3306/eap?useUnicode=yes&characterEncoding=UTF-8
 jdbc.username =pstcl
 jdbc.password =pstcl
@@ -19,3 +19,9 @@ hibernate.connection.CharSet=utf8
 hibernate.connection.characterEncoding=utf8
 hibernate.connection.useUnicode=true
 hibernate.jdbc.batch_size=100
+logging.level.org.apache.tomcat.util.scan.StandardJarScanner=ERROR
+# Hibernate logging options (INFO only shows startup messages)
+log4j.logger.org.hibernate=error
+# Log JDBC bind parameter runtime arguments
+log4j.logger.org.hibernate.type=error
+#EMAIL CONFIG
